Third attemt at making the keep queue
Now this time it actually works!

--- a/css/style.css
+++ b/css/style.css
@@ -893,6 +893,10 @@ label {
     font-weight: 500;
 }
 
+.keep-rolls-group {
+    display: flex;
+    align-items: center;
+}
 
 
 /* --- Modern Toggle Switch --- */
